# Aeternum-Sentinel

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml
.devcontainer/: Dockerfile.dev  devcontainer.json
.github/workflows/: docker-publish.yml
src/sentinel/: __init__.py  bot.py  cli.py  config.py
src/sentinel/cogs/: __init__.py  google_sheets_sync.py  image_analysis.py  reaction_roles.py  review.py  role_icons.py  utility.py  voice_channel_user_creation.py
src/sentinel/integrations/: __init__.py  google_sheets.py
src/sentinel/utils/: assets.py  storage.py
src/sentinel/web/: __init__.py  server.py
src/sentinel/web/routes/: __init__.py  auth_callback.py  auth_login.py  auth_utils.py  config_get.py  config_prefix.py  dashboard.py  guild_apply_role_icons.py  guild_google_sheet.py  guild_google_sheet_mapping.py  guild_google_sheet_preview.py  guild_google_sheet_test.py  guild_google_sheet_ui.py  guild_google_sheet_worksheets.py  guild_image_analysis.py  guild_name_format.py  guild_reaction_roles.py  guild_review_message.py  guild_role_icon_delete.py  guild_role_icons.py  guild_role_icons_enabled.py  guild_settings.py  guild_ts_message.py  guild_vc_user_creation_config.py  guild_vc_user_creation_config_delete.py  guild_vc_user_creation_enabled.py  guild_vod_link.py  health.py  landing.py  schemas.py
src/sentinel/web/static/: sentinel.css  sentinel.scss
src/sentinel/web/templates/: base.html  dashboard.html  guild_image_analysis.html  guild_settings.html  guild_sheet.html  landing.html
(+3 files in other folders)
