[project]
name = "aeternum-sentinel"
version = "0.1.0"
description = ""
authors = [
    {name = "Katze719",email = "pauldorn1234@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "discord-py (>=2.5.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
